- Draw nice jobs status and progress bar in collapse box title - Fix for too much deep recursion of padding for   TD inside spacing table

--- a/web/styles/content.css
+++ b/web/styles/content.css
@@ -173,7 +173,8 @@ TABLE.data TR:hover > TD {
   background-color: #fff2e5;
 }
 
-TABLE.spacing TR TD {
+TABLE.spacing > TR > TD,
+TABLE.spacing > TBODY > TR > TD {
   padding: 4px;
 }
 
